mini.output
Terminals unused in grammar

    FUNC


State 2 conflicts: 1 reduce/reduce
State 3 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 type_spec: INT
    2          | CHAR

    3 program: function_declaration_list

    4 function_declaration_list: function_declaration
    5                          | function_declaration_list function_declaration

    6 function_declaration: function
    7                     | declaration
    8                     | struct_definition

    9 struct_definition: STRUCT IDENTIFIER '{' field_list '}' ';'

   10 field_list: INT field_declarators ';'
   11           | CHAR field_declarators ';'
   12           | STRUCT IDENTIFIER field_declarators ';'
   13           | field_list INT field_declarators ';'
   14           | field_list CHAR field_declarators ';'
   15           | field_list STRUCT IDENTIFIER field_declarators ';'

   16 field_declarators: IDENTIFIER
   17                  | '*' IDENTIFIER
   18                  | IDENTIFIER array_dimensions
   19                  | field_declarators ',' IDENTIFIER
   20                  | field_declarators ',' '*' IDENTIFIER
   21                  | field_declarators ',' IDENTIFIER array_dimensions

   22 $@1: ε

   23 declaration: INT $@1 variable_list ';'

   24 $@2: ε

   25 declaration: CHAR $@2 variable_list ';'

   26 $@3: ε

   27 declaration: STRUCT IDENTIFIER $@3 struct_var_list ';'

   28 struct_var_list: struct_var_declaration
   29                | struct_var_list ',' struct_var_declaration

   30 struct_var_declaration: IDENTIFIER
   31                       | IDENTIFIER array_dimensions

   32 variable_list: variable_declaration
   33              | variable_list ',' variable_declaration

   34 variable_declaration: IDENTIFIER
   35                     | '*' IDENTIFIER
   36                     | IDENTIFIER array_dimensions

   37 array_dimensions: '[' INTEGER ']'
   38                 | array_dimensions '[' INTEGER ']'

   39 function: type_spec function_head '(' parameter_list_typed ')' block
   40         | function_head '(' parameter_list ')' block
   41         | error

   42 function_head: IDENTIFIER

   43 parameter_list: IDENTIFIER
   44               | parameter_list ',' IDENTIFIER
   45               | ε

   46 parameter_list_typed: ε
   47                     | type_spec IDENTIFIER
   48                     | parameter_list_typed ',' type_spec IDENTIFIER

   49 statement: assignment_statement ';'
   50          | input_statement ';'
   51          | output_statement ';'
   52          | call_statement ';'
   53          | return_statement ';'
   54          | if_statement
   55          | while_statement
   56          | for_statement
   57          | switch_statement
   58          | BREAK ';'
   59          | CONTINUE ';'
   60          | block
   61          | error

   62 block: '{' declaration_list statement_list '}'

   63 declaration_list: ε
   64                 | declaration_list declaration

   65 statement_list: ε
   66               | statement_list statement

   67 assignment_statement: IDENTIFIER '=' expression
   68                     | '*' IDENTIFIER '=' expression
   69                     | IDENTIFIER index_list '=' expression
   70                     | field_access '=' expression

   71 field_access: IDENTIFIER DOT IDENTIFIER
   72             | IDENTIFIER index_list DOT IDENTIFIER
   73             | field_access DOT IDENTIFIER
   74             | field_access '[' expression ']'

   75 expression: expression '+' expression
   76           | expression '-' expression
   77           | expression '*' expression
   78           | expression '/' expression
   79           | '-' expression
   80           | expression EQ expression
   81           | expression NE expression
   82           | expression LT expression
   83           | expression LE expression
   84           | expression GT expression
   85           | expression GE expression
   86           | '(' expression ')'
   87           | INTEGER
   88           | CHARACTER
   89           | '&' IDENTIFIER
   90           | '&' field_access
   91           | '*' expression
   92           | IDENTIFIER
   93           | IDENTIFIER index_list
   94           | field_access
   95           | call_expression
   96           | error

   97 argument_list: ε
   98              | expression_list

   99 expression_list: expression
  100                | expression_list ',' expression

  101 input_statement: INPUT IDENTIFIER

  102 output_statement: OUTPUT IDENTIFIER
  103                 | OUTPUT TEXT

  104 return_statement: RETURN expression

  105 if_statement: IF '(' expression ')' block
  106             | IF '(' expression ')' block ELSE block

  107 $@4: ε

  108 while_statement: WHILE '(' expression ')' $@4 block

  109 call_statement: IDENTIFIER '(' argument_list ')'

  110 call_expression: IDENTIFIER '(' argument_list ')'

  111 index_list: '[' expression ']'
  112           | index_list '[' expression ']'

  113 @5: ε

  114 switch_statement: SWITCH '(' expression ')' @5 '{' case_list_opt default_opt '}'

  115 case_list_opt: ε
  116              | case_list

  117 case_list: case_clause
  118          | case_list case_clause

  119 case_clause: CASE INTEGER ':' statement_list

  120 default_opt: ε
  121            | DEFAULT ':' statement_list

  122 $@6: ε

  123 for_statement: FOR '(' for_init ';' for_cond ';' for_iter ')' $@6 block

  124 for_init: ε
  125         | IDENTIFIER '=' expression
  126         | expression

  127 for_cond: ε
  128         | expression

  129 for_iter: ε
  130         | IDENTIFIER '=' expression
  131         | expression


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 89 90
    '(' (40) 39 40 86 105 106 108 109 110 114 123
    ')' (41) 39 40 86 105 106 108 109 110 114 123
    '*' (42) 17 20 35 68 77 91
    '+' (43) 75
    ',' (44) 19 20 21 29 33 44 48 100
    '-' (45) 76 79
    '/' (47) 78
    ':' (58) 119 121
    ';' (59) 9 10 11 12 13 14 15 23 25 27 49 50 51 52 53 58 59 123
    '=' (61) 67 68 69 70 125 130
    '[' (91) 37 38 74 111 112
    ']' (93) 37 38 74 111 112
    '{' (123) 9 62 114
    '}' (125) 9 62 114
    error (256) 41 61 96
    INT (258) 1 10 13 23
    CHAR (259) 2 11 14 25
    STRUCT (260) 9 12 15 27
    DOT (261) 71 72 73
    EQ (262) 80
    NE (263) 81
    LT (264) 82
    LE (265) 83
    GT (266) 84
    GE (267) 85
    UMINUS (268)
    UADDR (269)
    UDEREF (270)
    IF (271) 105 106
    ELSE (272) 106
    WHILE (273) 108
    FUNC (274)
    INPUT (275) 101
    OUTPUT (276) 102 103
    RETURN (277) 104
    SWITCH (278) 114
    CASE (279) 119
    DEFAULT (280) 121
    BREAK (281) 58
    FOR (282) 123
    CONTINUE (283) 59
    INTEGER <string> (284) 37 38 87 119
    IDENTIFIER <string> (285) 9 12 15 16 17 18 19 20 21 27 30 31 34 35 36 42 43 44 47 48 67 68 69 71 72 73 89 92 93 101 102 109 110 125 130
    TEXT <string> (286) 103
    CHARACTER <character> (287) 88


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    type_spec <dtype> (49)
        on left: 1 2
        on right: 39 47 48
    program <tac> (50)
        on left: 3
        on right: 0
    function_declaration_list <tac> (51)
        on left: 4 5
        on right: 3 5
    function_declaration <tac> (52)
        on left: 6 7 8
        on right: 4 5
    struct_definition <meta> (53)
        on left: 9
        on right: 8
    field_list <meta> (54)
        on left: 10 11 12 13 14 15
        on right: 9 13 14 15
    field_declarators <meta> (55)
        on left: 16 17 18 19 20 21
        on right: 10 11 12 13 14 15 19 20 21
    declaration <tac> (56)
        on left: 23 25 27
        on right: 7 64
    $@1 (57)
        on left: 22
        on right: 23
    $@2 (58)
        on left: 24
        on right: 25
    $@3 (59)
        on left: 26
        on right: 27
    struct_var_list <tac> (60)
        on left: 28 29
        on right: 27 29
    struct_var_declaration <tac> (61)
        on left: 30 31
        on right: 28 29
    variable_list <tac> (62)
        on left: 32 33
        on right: 23 25 33
    variable_declaration <tac> (63)
        on left: 34 35 36
        on right: 32 33
    array_dimensions <arr_dims> (64)
        on left: 37 38
        on right: 18 21 31 36 38
    function <tac> (65)
        on left: 39 40 41
        on right: 6
    function_head <sym> (66)
        on left: 42
        on right: 39 40
    parameter_list <tac> (67)
        on left: 43 44 45
        on right: 40 44
    parameter_list_typed <tac> (68)
        on left: 46 47 48
        on right: 39 48
    statement <tac> (69)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 66
    block <tac> (70)
        on left: 62
        on right: 39 40 60 105 106 108 123
    declaration_list <tac> (71)
        on left: 63 64
        on right: 62 64
    statement_list <tac> (72)
        on left: 65 66
        on right: 62 66 119 121
    assignment_statement <tac> (73)
        on left: 67 68 69 70
        on right: 49
    field_access <field_chain> (74)
        on left: 71 72 73 74
        on right: 70 73 74 90 94
    expression <exp> (75)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
        on right: 67 68 69 70 74 75 76 77 78 79 80 81 82 83 84 85 86 91 99 100 104 105 106 108 111 112 114 125 126 128 130 131
    argument_list <exp> (76)
        on left: 97 98
        on right: 109 110
    expression_list <exp> (77)
        on left: 99 100
        on right: 98 100
    input_statement <tac> (78)
        on left: 101
        on right: 50
    output_statement <tac> (79)
        on left: 102 103
        on right: 51
    return_statement <tac> (80)
        on left: 104
        on right: 53
    if_statement <tac> (81)
        on left: 105 106
        on right: 54
    while_statement <tac> (82)
        on left: 108
        on right: 55
    $@4 (83)
        on left: 107
        on right: 108
    call_statement <tac> (84)
        on left: 109
        on right: 52
    call_expression <exp> (85)
        on left: 110
        on right: 95
    index_list <exp_list> (86)
        on left: 111 112
        on right: 69 72 93 112
    switch_statement <tac> (87)
        on left: 114
        on right: 57
    @5 (88)
        on left: 113
        on right: 114
    case_list_opt <case_list> (89)
        on left: 115 116
        on right: 114
    case_list <case_list> (90)
        on left: 117 118
        on right: 116 118
    case_clause <case_list> (91)
        on left: 119
        on right: 117 118
    default_opt <tac> (92)
        on left: 120 121
        on right: 114
    for_statement <tac> (93)
        on left: 123
        on right: 56
    $@6 (94)
        on left: 122
        on right: 123
    for_init <tac> (95)
        on left: 124 125 126
        on right: 123
    for_cond <exp> (96)
        on left: 127 128
        on right: 123
    for_iter <tac> (97)
        on left: 129 130 131
        on right: 123


State 0

    0 $accept: • program $end
    1 type_spec: • INT
    2          | • CHAR
    3 program: • function_declaration_list
    4 function_declaration_list: • function_declaration
    5                          | • function_declaration_list function_declaration
    6 function_declaration: • function
    7                     | • declaration
    8                     | • struct_definition
    9 struct_definition: • STRUCT IDENTIFIER '{' field_list '}' ';'
   23 declaration: • INT $@1 variable_list ';'
   25            | • CHAR $@2 variable_list ';'
   27            | • STRUCT IDENTIFIER $@3 struct_var_list ';'
   39 function: • type_spec function_head '(' parameter_list_typed ')' block
   40         | • function_head '(' parameter_list ')' block
   41         | • error
   42 function_head: • IDENTIFIER

    error       shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRUCT      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    type_spec                  go to state 6
    program                    go to state 7
    function_declaration_list  go to state 8
    function_declaration       go to state 9
    struct_definition          go to state 10
    declaration                go to state 11
    function                   go to state 12
    function_head              go to state 13


State 1

   41 function: error •

    $default  reduce using rule 41 (function)


State 2

    1 type_spec: INT •  [IDENTIFIER]
   22 $@1: ε •  [IDENTIFIER, '*']
   23 declaration: INT • $@1 variable_list ';'

    IDENTIFIER  reduce using rule 1 (type_spec)
    IDENTIFIER  [reduce using rule 22 ($@1)]
    '*'         reduce using rule 22 ($@1)
    $default    reduce using rule 1 (type_spec)

    $@1  go to state 14

    reduce/reduce conflict on token IDENTIFIER:
        1 type_spec: INT •
       22 $@1: ε •
      First example: INT • IDENTIFIER '(' parameter_list_typed ')' block $end
      First reduce derivation
        $accept
        ↳ 0: program                                                                             $end
             ↳ 3: function_declaration_list
                  ↳ 4: function_declaration
                       ↳ 6: function
                            ↳ 39: type_spec  function_head    '(' parameter_list_typed ')' block
                                  ↳ 1: INT • ↳ 42: IDENTIFIER
      Second example: INT • IDENTIFIER ';' $end
      Second reduce derivation
        $accept
        ↳ 0: program                                                           $end
             ↳ 3: function_declaration_list
                  ↳ 4: function_declaration
                       ↳ 7: declaration
                            ↳ 23: INT $@1       variable_list              ';'
                                      ↳ 22: ε • ↳ 32: variable_declaration
                                                      ↳ 34: IDENTIFIER



State 3

    2 type_spec: CHAR •  [IDENTIFIER]
   24 $@2: ε •  [IDENTIFIER, '*']
   25 declaration: CHAR • $@2 variable_list ';'

    IDENTIFIER  reduce using rule 2 (type_spec)
    IDENTIFIER  [reduce using rule 24 ($@2)]
    '*'         reduce using rule 24 ($@2)
    $default    reduce using rule 2 (type_spec)

    $@2  go to state 15

    reduce/reduce conflict on token IDENTIFIER:
        2 type_spec: CHAR •
       24 $@2: ε •
      First example: CHAR • IDENTIFIER '(' parameter_list_typed ')' block $end
      First reduce derivation
        $accept
        ↳ 0: program                                                                              $end
             ↳ 3: function_declaration_list
                  ↳ 4: function_declaration
                       ↳ 6: function
                            ↳ 39: type_spec   function_head    '(' parameter_list_typed ')' block
                                  ↳ 2: CHAR • ↳ 42: IDENTIFIER
      Second example: CHAR • IDENTIFIER ';' $end
      Second reduce derivation
        $accept
        ↳ 0: program                                                            $end
             ↳ 3: function_declaration_list
                  ↳ 4: function_declaration
                       ↳ 7: declaration
                            ↳ 25: CHAR $@2       variable_list              ';'
                                       ↳ 24: ε • ↳ 32: variable_declaration
                                                       ↳ 34: IDENTIFIER



State 4

    9 struct_definition: STRUCT • IDENTIFIER '{' field_list '}' ';'
   27 declaration: STRUCT • IDENTIFIER $@3 struct_var_list ';'

    IDENTIFIER  shift, and go to state 16


State 5

   42 function_head: IDENTIFIER •

    $default  reduce using rule 42 (function_head)


State 6

   39 function: type_spec • function_head '(' parameter_list_typed ')' block
   42 function_head: • IDENTIFIER

    IDENTIFIER  shift, and go to state 5

    function_head  go to state 17


State 7

    0 $accept: program • $end

    $end  shift, and go to state 18


State 8

    1 type_spec: • INT
    2          | • CHAR
    3 program: function_declaration_list •  [$end]
    5 function_declaration_list: function_declaration_list • function_declaration
    6 function_declaration: • function
    7                     | • declaration
    8                     | • struct_definition
    9 struct_definition: • STRUCT IDENTIFIER '{' field_list '}' ';'
   23 declaration: • INT $@1 variable_list ';'
   25            | • CHAR $@2 variable_list ';'
   27            | • STRUCT IDENTIFIER $@3 struct_var_list ';'
   39 function: • type_spec function_head '(' parameter_list_typed ')' block
   40         | • function_head '(' parameter_list ')' block
   41         | • error
   42 function_head: • IDENTIFIER

    error       shift, and go to state 1
    INT         shift, and go to state 2
    CHAR        shift, and go to state 3
    STRUCT      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5

    $end  reduce using rule 3 (program)

    type_spec             go to state 6
    function_declaration  go to state 19
    struct_definition     go to state 10
    declaration           go to state 11
    function              go to state 12
    function_head         go to state 13


State 9

    4 function_declaration_list: function_declaration •

    $default  reduce using rule 4 (function_declaration_list)


State 10

    8 function_declaration: struct_definition •

    $default  reduce using rule 8 (function_declaration)


State 11

    7 function_declaration: declaration •

    $default  reduce using rule 7 (function_declaration)


State 12

    6 function_declaration: function •

    $default  reduce using rule 6 (function_declaration)


State 13

   40 function: function_head • '(' parameter_list ')' block

    '('  shift, and go to state 20


State 14

   23 declaration: INT $@1 • variable_list ';'
   32 variable_list: • variable_declaration
   33              | • variable_list ',' variable_declaration
   34 variable_declaration: • IDENTIFIER
   35                     | • '*' IDENTIFIER
   36                     | • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 21
    '*'         shift, and go to state 22

    variable_list         go to state 23
    variable_declaration  go to state 24


State 15

   25 declaration: CHAR $@2 • variable_list ';'
   32 variable_list: • variable_declaration
   33              | • variable_list ',' variable_declaration
   34 variable_declaration: • IDENTIFIER
   35                     | • '*' IDENTIFIER
   36                     | • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 21
    '*'         shift, and go to state 22

    variable_list         go to state 25
    variable_declaration  go to state 24


State 16

    9 struct_definition: STRUCT IDENTIFIER • '{' field_list '}' ';'
   26 $@3: ε •  [IDENTIFIER]
   27 declaration: STRUCT IDENTIFIER • $@3 struct_var_list ';'

    '{'  shift, and go to state 26

    $default  reduce using rule 26 ($@3)

    $@3  go to state 27


State 17

   39 function: type_spec function_head • '(' parameter_list_typed ')' block

    '('  shift, and go to state 28


State 18

    0 $accept: program $end •

    $default  accept


State 19

    5 function_declaration_list: function_declaration_list function_declaration •

    $default  reduce using rule 5 (function_declaration_list)


State 20

   40 function: function_head '(' • parameter_list ')' block
   43 parameter_list: • IDENTIFIER
   44               | • parameter_list ',' IDENTIFIER
   45               | ε •  [',', ')']

    IDENTIFIER  shift, and go to state 29

    $default  reduce using rule 45 (parameter_list)

    parameter_list  go to state 30


State 21

   34 variable_declaration: IDENTIFIER •  [';', ',']
   36                     | IDENTIFIER • array_dimensions
   37 array_dimensions: • '[' INTEGER ']'
   38                 | • array_dimensions '[' INTEGER ']'

    '['  shift, and go to state 31

    $default  reduce using rule 34 (variable_declaration)

    array_dimensions  go to state 32


State 22

   35 variable_declaration: '*' • IDENTIFIER

    IDENTIFIER  shift, and go to state 33


State 23

   23 declaration: INT $@1 variable_list • ';'
   33 variable_list: variable_list • ',' variable_declaration

    ';'  shift, and go to state 34
    ','  shift, and go to state 35


State 24

   32 variable_list: variable_declaration •

    $default  reduce using rule 32 (variable_list)


State 25

   25 declaration: CHAR $@2 variable_list • ';'
   33 variable_list: variable_list • ',' variable_declaration

    ';'  shift, and go to state 36
    ','  shift, and go to state 35


State 26

    9 struct_definition: STRUCT IDENTIFIER '{' • field_list '}' ';'
   10 field_list: • INT field_declarators ';'
   11           | • CHAR field_declarators ';'
   12           | • STRUCT IDENTIFIER field_declarators ';'
   13           | • field_list INT field_declarators ';'
   14           | • field_list CHAR field_declarators ';'
   15           | • field_list STRUCT IDENTIFIER field_declarators ';'

    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    STRUCT  shift, and go to state 39

    field_list  go to state 40


State 27

   27 declaration: STRUCT IDENTIFIER $@3 • struct_var_list ';'
   28 struct_var_list: • struct_var_declaration
   29                | • struct_var_list ',' struct_var_declaration
   30 struct_var_declaration: • IDENTIFIER
   31                       | • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 41

    struct_var_list         go to state 42
    struct_var_declaration  go to state 43


State 28

    1 type_spec: • INT
    2          | • CHAR
   39 function: type_spec function_head '(' • parameter_list_typed ')' block
   46 parameter_list_typed: ε •  [',', ')']
   47                     | • type_spec IDENTIFIER
   48                     | • parameter_list_typed ',' type_spec IDENTIFIER

    INT   shift, and go to state 44
    CHAR  shift, and go to state 45

    $default  reduce using rule 46 (parameter_list_typed)

    type_spec             go to state 46
    parameter_list_typed  go to state 47


State 29

   43 parameter_list: IDENTIFIER •

    $default  reduce using rule 43 (parameter_list)


State 30

   40 function: function_head '(' parameter_list • ')' block
   44 parameter_list: parameter_list • ',' IDENTIFIER

    ','  shift, and go to state 48
    ')'  shift, and go to state 49


State 31

   37 array_dimensions: '[' • INTEGER ']'

    INTEGER  shift, and go to state 50


State 32

   36 variable_declaration: IDENTIFIER array_dimensions •  [';', ',']
   38 array_dimensions: array_dimensions • '[' INTEGER ']'

    '['  shift, and go to state 51

    $default  reduce using rule 36 (variable_declaration)


State 33

   35 variable_declaration: '*' IDENTIFIER •

    $default  reduce using rule 35 (variable_declaration)


State 34

   23 declaration: INT $@1 variable_list ';' •

    $default  reduce using rule 23 (declaration)


State 35

   33 variable_list: variable_list ',' • variable_declaration
   34 variable_declaration: • IDENTIFIER
   35                     | • '*' IDENTIFIER
   36                     | • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 21
    '*'         shift, and go to state 22

    variable_declaration  go to state 52


State 36

   25 declaration: CHAR $@2 variable_list ';' •

    $default  reduce using rule 25 (declaration)


State 37

   10 field_list: INT • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 55


State 38

   11 field_list: CHAR • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 56


State 39

   12 field_list: STRUCT • IDENTIFIER field_declarators ';'

    IDENTIFIER  shift, and go to state 57


State 40

    9 struct_definition: STRUCT IDENTIFIER '{' field_list • '}' ';'
   13 field_list: field_list • INT field_declarators ';'
   14           | field_list • CHAR field_declarators ';'
   15           | field_list • STRUCT IDENTIFIER field_declarators ';'

    INT     shift, and go to state 58
    CHAR    shift, and go to state 59
    STRUCT  shift, and go to state 60
    '}'     shift, and go to state 61


State 41

   30 struct_var_declaration: IDENTIFIER •  [';', ',']
   31                       | IDENTIFIER • array_dimensions
   37 array_dimensions: • '[' INTEGER ']'
   38                 | • array_dimensions '[' INTEGER ']'

    '['  shift, and go to state 31

    $default  reduce using rule 30 (struct_var_declaration)

    array_dimensions  go to state 62


State 42

   27 declaration: STRUCT IDENTIFIER $@3 struct_var_list • ';'
   29 struct_var_list: struct_var_list • ',' struct_var_declaration

    ';'  shift, and go to state 63
    ','  shift, and go to state 64


State 43

   28 struct_var_list: struct_var_declaration •

    $default  reduce using rule 28 (struct_var_list)


State 44

    1 type_spec: INT •

    $default  reduce using rule 1 (type_spec)


State 45

    2 type_spec: CHAR •

    $default  reduce using rule 2 (type_spec)


State 46

   47 parameter_list_typed: type_spec • IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 47

   39 function: type_spec function_head '(' parameter_list_typed • ')' block
   48 parameter_list_typed: parameter_list_typed • ',' type_spec IDENTIFIER

    ','  shift, and go to state 66
    ')'  shift, and go to state 67


State 48

   44 parameter_list: parameter_list ',' • IDENTIFIER

    IDENTIFIER  shift, and go to state 68


State 49

   40 function: function_head '(' parameter_list ')' • block
   62 block: • '{' declaration_list statement_list '}'

    '{'  shift, and go to state 69

    block  go to state 70


State 50

   37 array_dimensions: '[' INTEGER • ']'

    ']'  shift, and go to state 71


State 51

   38 array_dimensions: array_dimensions '[' • INTEGER ']'

    INTEGER  shift, and go to state 72


State 52

   33 variable_list: variable_list ',' variable_declaration •

    $default  reduce using rule 33 (variable_list)


State 53

   16 field_declarators: IDENTIFIER •  [';', ',']
   18                  | IDENTIFIER • array_dimensions
   37 array_dimensions: • '[' INTEGER ']'
   38                 | • array_dimensions '[' INTEGER ']'

    '['  shift, and go to state 31

    $default  reduce using rule 16 (field_declarators)

    array_dimensions  go to state 73


State 54

   17 field_declarators: '*' • IDENTIFIER

    IDENTIFIER  shift, and go to state 74


State 55

   10 field_list: INT field_declarators • ';'
   19 field_declarators: field_declarators • ',' IDENTIFIER
   20                  | field_declarators • ',' '*' IDENTIFIER
   21                  | field_declarators • ',' IDENTIFIER array_dimensions

    ';'  shift, and go to state 75
    ','  shift, and go to state 76


State 56

   11 field_list: CHAR field_declarators • ';'
   19 field_declarators: field_declarators • ',' IDENTIFIER
   20                  | field_declarators • ',' '*' IDENTIFIER
   21                  | field_declarators • ',' IDENTIFIER array_dimensions

    ';'  shift, and go to state 77
    ','  shift, and go to state 76


State 57

   12 field_list: STRUCT IDENTIFIER • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 78


State 58

   13 field_list: field_list INT • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 79


State 59

   14 field_list: field_list CHAR • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 80


State 60

   15 field_list: field_list STRUCT • IDENTIFIER field_declarators ';'

    IDENTIFIER  shift, and go to state 81


State 61

    9 struct_definition: STRUCT IDENTIFIER '{' field_list '}' • ';'

    ';'  shift, and go to state 82


State 62

   31 struct_var_declaration: IDENTIFIER array_dimensions •  [';', ',']
   38 array_dimensions: array_dimensions • '[' INTEGER ']'

    '['  shift, and go to state 51

    $default  reduce using rule 31 (struct_var_declaration)


State 63

   27 declaration: STRUCT IDENTIFIER $@3 struct_var_list ';' •

    $default  reduce using rule 27 (declaration)


State 64

   29 struct_var_list: struct_var_list ',' • struct_var_declaration
   30 struct_var_declaration: • IDENTIFIER
   31                       | • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 41

    struct_var_declaration  go to state 83


State 65

   47 parameter_list_typed: type_spec IDENTIFIER •

    $default  reduce using rule 47 (parameter_list_typed)


State 66

    1 type_spec: • INT
    2          | • CHAR
   48 parameter_list_typed: parameter_list_typed ',' • type_spec IDENTIFIER

    INT   shift, and go to state 44
    CHAR  shift, and go to state 45

    type_spec  go to state 84


State 67

   39 function: type_spec function_head '(' parameter_list_typed ')' • block
   62 block: • '{' declaration_list statement_list '}'

    '{'  shift, and go to state 69

    block  go to state 85


State 68

   44 parameter_list: parameter_list ',' IDENTIFIER •

    $default  reduce using rule 44 (parameter_list)


State 69

   62 block: '{' • declaration_list statement_list '}'
   63 declaration_list: ε •
   64                 | • declaration_list declaration

    $default  reduce using rule 63 (declaration_list)

    declaration_list  go to state 86


State 70

   40 function: function_head '(' parameter_list ')' block •

    $default  reduce using rule 40 (function)


State 71

   37 array_dimensions: '[' INTEGER ']' •

    $default  reduce using rule 37 (array_dimensions)


State 72

   38 array_dimensions: array_dimensions '[' INTEGER • ']'

    ']'  shift, and go to state 87


State 73

   18 field_declarators: IDENTIFIER array_dimensions •  [';', ',']
   38 array_dimensions: array_dimensions • '[' INTEGER ']'

    '['  shift, and go to state 51

    $default  reduce using rule 18 (field_declarators)


State 74

   17 field_declarators: '*' IDENTIFIER •

    $default  reduce using rule 17 (field_declarators)


State 75

   10 field_list: INT field_declarators ';' •

    $default  reduce using rule 10 (field_list)


State 76

   19 field_declarators: field_declarators ',' • IDENTIFIER
   20                  | field_declarators ',' • '*' IDENTIFIER
   21                  | field_declarators ',' • IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 88
    '*'         shift, and go to state 89


State 77

   11 field_list: CHAR field_declarators ';' •

    $default  reduce using rule 11 (field_list)


State 78

   12 field_list: STRUCT IDENTIFIER field_declarators • ';'
   19 field_declarators: field_declarators • ',' IDENTIFIER
   20                  | field_declarators • ',' '*' IDENTIFIER
   21                  | field_declarators • ',' IDENTIFIER array_dimensions

    ';'  shift, and go to state 90
    ','  shift, and go to state 76


State 79

   13 field_list: field_list INT field_declarators • ';'
   19 field_declarators: field_declarators • ',' IDENTIFIER
   20                  | field_declarators • ',' '*' IDENTIFIER
   21                  | field_declarators • ',' IDENTIFIER array_dimensions

    ';'  shift, and go to state 91
    ','  shift, and go to state 76


State 80

   14 field_list: field_list CHAR field_declarators • ';'
   19 field_declarators: field_declarators • ',' IDENTIFIER
   20                  | field_declarators • ',' '*' IDENTIFIER
   21                  | field_declarators • ',' IDENTIFIER array_dimensions

    ';'  shift, and go to state 92
    ','  shift, and go to state 76


State 81

   15 field_list: field_list STRUCT IDENTIFIER • field_declarators ';'
   16 field_declarators: • IDENTIFIER
   17                  | • '*' IDENTIFIER
   18                  | • IDENTIFIER array_dimensions
   19                  | • field_declarators ',' IDENTIFIER
   20                  | • field_declarators ',' '*' IDENTIFIER
   21                  | • field_declarators ',' IDENTIFIER array_dimensions

    IDENTIFIER  shift, and go to state 53
    '*'         shift, and go to state 54

    field_declarators  go to state 93


State 82

    9 struct_definition: STRUCT IDENTIFIER '{' field_list '}' ';' •

    $default  reduce using rule 9 (struct_definition)


State 83

   29 struct_var_list: struct_var_list ',' struct_var_declaration •

    $default  reduce using rule 29 (struct_var_list)


State 84

   48 parameter_list_typed: parameter_list_typed ',' type_spec • IDENTIFIER

    IDENTIFIER  shift, and go to state 94


State 85

   39 function: type_spec function_head '(' parameter_list_typed ')' block •

    $default  reduce using rule 39 (function)


State 86

   23 declaration: • INT $@1 variable_list ';'
   25            | • CHAR $@2 variable_list ';'
   27            | • STRUCT IDENTIFIER $@3 struct_var_list ';'
   62 block: '{' declaration_list • statement_list '}'
   64 declaration_list: declaration_list • declaration
   65 statement_list: ε •  [error, IF, WHILE, INPUT, OUTPUT, RETURN, SWITCH, BREAK, FOR, CONTINUE, IDENTIFIER, '*', '{', '}']
   66               | • statement_list statement

    INT     shift, and go to state 95
    CHAR    shift, and go to state 96
    STRUCT  shift, and go to state 97

    $default  reduce using rule 65 (statement_list)

    declaration     go to state 98
    statement_list  go to state 99


State 87

   38 array_dimensions: array_dimensions '[' INTEGER ']' •

    $default  reduce using rule 38 (array_dimensions)


State 88

   19 field_declarators: field_declarators ',' IDENTIFIER •  [';', ',']
   21                  | field_declarators ',' IDENTIFIER • array_dimensions
   37 array_dimensions: • '[' INTEGER ']'
   38                 | • array_dimensions '[' INTEGER ']'

    '['  shift, and go to state 31

    $default  reduce using rule 19 (field_declarators)

    array_dimensions  go to state 100


State 89

   20 field_declarators: field_declarators ',' '*' • IDENTIFIER

    IDENTIFIER  shift, and go to state 101


State 90

   12 field_list: STRUCT IDENTIFIER field_declarators ';' •

    $default  reduce using rule 12 (field_list)


State 91

   13 field_list: field_list INT field_declarators ';' •

    $default  reduce using rule 13 (field_list)


State 92

   14 field_list: field_list CHAR field_declarators ';' •

    $default  reduce using rule 14 (field_list)


State 93
